code: constructor injection